[DEV-9652] Fix: Gradient legend patterns not showing up (#1653)
* fix: gradients not showing patterns

* feat: add stories and padding

--- a/packages/map/src/components/Legend/components/index.scss
+++ b/packages/map/src/components/Legend/components/index.scss
@@ -170,6 +170,9 @@
           }
         }
       }
+      .legend-container__ul.patterns-only {
+        margin-top: 10px;
+      }
     }
 
     .bottom .legend-container__ul--single-column:not(.vertical-sorted) {
